[package]
name = "ir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expr = { path = "../expr" }
ir-tools = { path = "../ir-tools" }
repr = { path = "../repr" }
sql = { path = "../sql" }
mz-aws-util = { path = "../aws-util", features = ["kinesis", "s3", "sqs", "sts"] }